# Ares-Engine

./: .gitignore  LICENSE  README.md
ares-engine/: CMakeLists.txt
ares-engine/entry-point/: CMakeLists.txt
ares-engine/modules/core/: CMakeLists.txt
ares-engine/modules/core/doc/: ares-core.natvis
ares-engine/modules/core/include/: core.h
ares-engine/modules/core/include/core/: allocator.h  allocator_base.h  allocator_manager.h  atomic.h  avl_node.h  avl_tree.h  avl_tree_iterator.h  core_api.h  main.h  packed_array.h  packed_array_iterator.h  page_allocator.h  platform.h  slab_pool.h  sys_allocator.h  temp_allocator.h  test.h  type_traits.h  vector.h
ares-engine/modules/core/include/core/data/: avl_node.h  avl_tree_iterator.h
ares-engine/modules/core/include/core/internal/: common.h  config.h  engine_api.h  macros.h  os_page_interface.h  page_allocator.h  platform.h  sys_allocator.h
ares-engine/modules/core/include/core/internal/containers/: avl_node.h  avl_tree_iterator.h  packed_array_iterator.h
ares-engine/modules/core/include/core/internal/platform/unix/: unix_page_allocator.h  unix_page_interface.h
ares-engine/modules/core/include/core/internal/platform/windows/: win32_page_allocator.h  win32_page_interface.h
ares-engine/modules/core/src/: ares_core_pch.h
ares-engine/modules/core/src/core/: main.cpp  test.cpp
ares-engine/modules/core/src/core/internal/platform/unix/: unix_page_allocator.cpp  unix_page_interface.cpp
ares-engine/modules/core/src/core/internal/platform/windows/: win32_page_allocator.cpp  win32_page_interface.cpp
ares-engine/modules/entry_point/: CMakeLists.txt
ares-engine/modules/entry_point/include/entry_point/: entry_point.h  module_registry.h  platform.h
ares-engine/modules/entry_point/src/entry_point/: module_registry.cpp
ares-engine/modules/launcher/: CMakeLists.txt
ares-engine/modules/launcher/include/launcher/: entry_point.h  module_registry.h  platform.h
ares-engine/modules/launcher/src/: ares_launcher_pch.h
ares-engine/modules/launcher/src/launcher/: module_registry.cpp  os_page_interface.cpp  page_allocator.cpp  temp_allocator.cpp
ares-engine/modules/launcher/src/launcher/platform/windows/: win32_entry_point.cpp
ares-engine/sample_project/: modules.ini
ares-engine/sample_project/src/: main.cpp
